<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_add_user"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/title_add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_add_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/plante" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_add_user"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_user_page_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/form_add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_user">

        <EditText
            android:id="@+id/fullname_add_user"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:layout_weight="1"
            android:hint="@string/name_user"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_add_user"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:hint="@string/email_connexion"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwd_add_user"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="@string/mdp_connexion"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_passwd_add_user"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="@string/confirm_mdp_add_user"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit_add_user"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/darkGreen"
            android:onClick="handleLogin"
            android:text="@string/submit_save"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/add_user_connexion"
            style="DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_user_connexion" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>