<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:layout_marginBottom="@dimen/default_margin">

       <ImageView
            android:id="@+id/image_connexion"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/default_margin"
            android:adjustViewBounds="true"
            android:src="@drawable/woman" />

    <EditText
        android:id="@+id/name_user_profil"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:autofillHints="name_user"
        android:hint="@string/name_user"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwd_connexion"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:autofillHints="password"
        android:hint="@string/mdp_connexion"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_profil"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:autofillHints="emailAddress"
        android:hint="@string/email_connexion"
        android:inputType="none"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/submit_connexion"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/darkGreen"
        android:onClick="handleLogin"
        android:text="@string/submit_save"
        android:textColor="@color/white" />

</LinearLayout>